[Feature]: Vanilla MC tool support (#1165)